--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    display: flex;
+    font-family: 'Roboto Condensed', sans-serif;
+
+    background: rgb(87,255,208);
+    background: linear-gradient(90deg, rgba(87,255,208,1) 0%, rgba(73,216,162,1) 14%, rgba(169,255,159,1) 100%, rgba(255,255,255,1) 100%);
+    color: white;
+
+    height: 100vh;
+    justify-content: center; /* alinhamento vertical */
+    align-items: center; /* alinhamento horizontal */
+    text-align: center;
+
 }
